HelpMePlay | 1.0.5
	New:
		Added a dialog to skip the Covenant introduction for Night Fae.
		Added a dialog for the NPCs involved in the "Insider Trading" quest in Oribos.
		Added multiple dialogs for Ve'rayn.
		Added a glow to the corresponding button (based on what's called for) during the "Dead Drop" quest in Bastion.
	Changes:
		
	Fixes:
		