@@ -4,6 +4,7 @@ HelpMePlay | 1.0.5
 		Added a dialog for the NPCs involved in the "Insider Trading" quest in Oribos.
 		Added multiple dialogs for Ve'rayn.
 		Added a glow to the corresponding button (based on what's called for) during the "Dead Drop" quest in Bastion.
+		Added a glow to the corresponding button (based on what's called for) during the "We'll Make an Aspirant Out of You" world quest in Bastion.
 	Changes:
 		
 	Fixes:
